<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MovieProject</string>
    <string name="results">results</string>
	<string name="content_authority">info.houseofkim.movieproject.app</string>
	<string name="imagedescr">Poster</string>
	<string name="detail_error_message">Movie data not available</string>
	<string name="moviedbimageurl">http://image.tmdb.org/t/p/w185</string>
	<string name="movieId">id</string>
	<string name="movieName">original_title</string>
    <string name="movieDescription">overview</string>
    <string name="movieReleaseDate">release_date</string>
	<string name="movieRating">rating</string>
    <string name="image">poster_path</string>
    <string name="movieDuration">runtime</string>
    <string name="movieTrailer1">video</string>
	<string name="movies_popular">Popular</string>
	<string name="movies_top">Top</string>
	<string name="movies_favorite">Favorite</string>
	<string name="search">Search</string>
	<string name="settings">Settings</string>
	<string name="pref_sort_default">Popular</string>
	<string name="pref_sort_label">Sort</string>
	<string name="pref_sort_key">sort</string>
    <string name="playicon">PlayIcon</string>
	<string name="review_author">John Doe</string>
	<string name="review_content">review_content</string>
</resources>