<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a8e8ff">

    <ImageView
        android:id="@+id/movie_pic"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagedescr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_name"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/movieName"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearside"
        android:layout_width="210dp"
        android:layout_height="178dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/movie_pic"
        app:layout_constraintStart_toEndOf="@+id/movie_pic"
        app:layout_constraintTop_toBottomOf="@+id/movie_name">

        <TextView
            android:id="@+id/movie_releasedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieReleaseDate" />

        <TextView
            android:id="@+id/movie_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieDuration" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieRating" />

        <Button
            android:id="@+id/button"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="MARK AS FAVORITE"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearbottom"
        android:layout_width="371dp"
        android:layout_height="187dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_pic">

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>